--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -68,6 +68,21 @@ parts:
       craftctl default
       # WORKAROUND: Use python from search path, the path detected by meson doesn't exist when running the Snap
       sed -e '1c#!/usr/bin/env python3' -i ${CRAFT_PART_INSTALL}/snap/komikku/current/usr/bin/komikku
+    stage-packages:
+      - python3-bs4
+      - python3-brotli
+      - python3-dateparser
+      - python3-emoji
+      - python3-keyring
+      - python3-lxml
+      - python3-natsort
+      - python3-piexif
+      - python3-pil
+      - python3-magic
+      - unrar
+      - unrar-free
+      - python3-requests
+      - python3-unidecode
     organize:
       snap/komikku/current/usr: usr
     
