--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -83,6 +83,8 @@ parts:
       - unrar-free
       - python3-requests
       - python3-unidecode
+      - python3-gi
+      - python3-cairo
     organize:
       snap/komikku/current/usr: usr
     
