--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -85,6 +85,11 @@ parts:
       - python3-unidecode
       - python3-gi
       - python3-cairo
+      - gir1.2-glib-2.0
+      - gir1.2-gtk-3.0
+      - gir1.2-notify-0.7
+      - gir1.2-webkit2-4.1
+      - libgirepository-1.0-1 
     organize:
       snap/komikku/current/usr: usr
     
